--- a/css/style.css
+++ b/css/style.css
@@ -24,9 +24,7 @@ a {
   text-decoration: none;
 }
 .container {
-  width: 1230px;
-  padding-left: 15px;
-  padding-right: 15px;
+  width: 1200px;
   margin: 0 auto;
 }
 .row {
@@ -41,8 +39,13 @@ a {
   padding: 0 15px;
   width: 25%;
 }
+.col-12 {
+  width: 100%;
+  padding: 0 15px;
+}
 /*---------header---------------------*/
 .header {
+  justify-content: space-between;
 }
 .logo {
   color: var(--blue);
@@ -90,8 +93,9 @@ a {
   margin-left: auto;
 }
 .header-connect {
-  display: block;
+  display: flex;
   margin-left: auto;
+  align-items: flex-end;
 }
 .header-mail {
   font-weight: 500;
@@ -105,60 +109,6 @@ a {
   line-height: 1.14em;
   letter-spacing: 0.02em;
   margin-left: 40px;
-}
-
-.line {
-  border: 1px solid #ececec;
-}
-/*---------HEROY---------------------*/
-.studio {
-  color: var(--white);
-  text-transform: capitalize;
-  font-family: "Raleway", sans-serif;
-  font-size: 26px;
-  line-height: 1.19em;
-  text-decoration: none;
-}
-.hero-title {
-  margin-top: 0;
-  margin-bottom: 0;
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36em;
-  color: var(--white);
-  text-transform: uppercase;
-  margin-bottom: 30px;
-}
-.container-hero {
-  text-align: center;
-  background-color: #2f303a;
-  min-height: 600px;
-}
-.button {
-  font-family: inherit;
-  cursor: pointer;
-  border: none;
-  background-color: #f5f4fa;
-  border-radius: 4px;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.625em;
-}
-.button:hover,
-.button:focus {
-  color: var(--white);
-  background-color: var(--blue);
-}
-.button-style {
-  cursor: pointer;
-  font-weight: bold;
-  padding: 10px 32px;
-  font-size: 16px;
-  line-height: 1.87em;
-  color: var(--white);
-  background-color: var(--blue);
-  min-width: 136px;
-  text-align: center;
 }
 .link {
   color: #212121;
@@ -178,19 +128,48 @@ a {
   padding: 0;
   margin: 0;
 }
-.section-title {
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2em;
-}
-.section-post-title {
-  font-size: 16px;
-  line-height: 1.875em;
-  color: var(--grey);
+
+.line {
+  border: 1px solid #ececec;
 }
 
-/*-------------SECTION-ASH----------------*/
-.ash-post {
+/*---------HEROY---------------------*/
+.hero-title {
+  padding-top: 200px;
+  margin-bottom: 0;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36em;
+  color: var(--white);
+  text-transform: uppercase;
+  margin-bottom: 30px;
+}
+.container-hero {
+  text-align: center;
+  background-color: #2f303a;
+  min-height: 600px;
+}
+.button-style {
+  cursor: pointer;
+  font-weight: bold;
+  padding: 10px 32px;
+  font-size: 16px;
+  line-height: 1.87em;
+  color: var(--white);
+  background-color: var(--blue);
+  min-width: 136px;
+  text-align: center;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+.text-center {
+  text-align: center;
+}
+.d-fex {
+  display: flex;
+}
+
+/*-------------SECTION-----------------*/
+.h3-title {
   margin-bottom: 0;
   font-weight: bold;
   font-size: 14px;
@@ -198,7 +177,7 @@ a {
   letter-spacing: 0.03em;
   text-transform: uppercase;
 }
-.ash-p {
+.p-title {
   margin-top: 10px;
   margin-bottom: 0;
   font-size: 14px;
@@ -206,33 +185,30 @@ a {
   color: var(--grey);
   letter-spacing: 0.03em;
 }
-.section-title {
-  margin-top: 0;
-  margin-bottom: 0px;
-}
-.ash-title {
+
+.h2-title {
   font-weight: bold;
   font-size: 36px;
   line-height: 1.16em;
   letter-spacing: 0.03em;
 }
-.section-name {
+.section-our-teams {
   padding: 94px 0;
 }
 
-.name-spesh {
+.team-specialist {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18em;
   letter-spacing: 0.03em;
 }
-.name-id {
+.team-id {
   font-size: 16px;
   line-height: 1.18em;
   color: var(--grey);
   letter-spacing: 0.03em;
 }
-.shadow {
+.shadow-team {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
 }
@@ -244,10 +220,24 @@ img {
   max-width: 100%;
 }
 .team-member {
-  padding: 20px 0;
+  padding-top: 0;
+  padding-bottom: 20px;
 }
-
+.team-bg-light-grey {
+  background-color: var(--light-grey);
+}
+.team-bg-white {
+  background-color: var(--white);
+}
 /*-----------FOOTER----------------------*/
+.studio {
+  color: var(--white);
+  text-transform: capitalize;
+  font-family: "Raleway", sans-serif;
+  font-size: 26px;
+  line-height: 1.19em;
+  text-decoration: none;
+}
 .white {
   color: var(--white);
   font-size: 14px;
@@ -280,26 +270,51 @@ img {
 .mb-94 {
   margin-bottom: 94px;
 }
-.bg-light-grey {
-  background-color: var(--light-grey);
-}
-.bg-white {
-  background-color: var(--white);
-}
-.text-center {
-  text-align: center;
-}
-/*-----------BUTTONS-------------------*/
 
-/*-------------SECTION-CARD------------*/
-.section-card {
+/*-----------BUTTONS-------------------*/
+.d-flex-justify-center {
   display: flex;
-  flex-wrap: wrap;
+  justify-content: center;
+}
+.ml-8 {
+  margin-left: 8px;
+}
+.button {
+  margin-top: 94px;
+  margin-bottom: 56px;
+  width: 103px;
+  height: 38px;
+  font-family: inherit;
+  cursor: pointer;
+  border: none;
+  background-color: #f5f4fa;
+  border-radius: 4px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.625em;
+}
+.button:hover,
+.button:focus {
+  color: var(--white);
+  background-color: var(--blue);
+}
+/*-------------SECTION-CARD------------*/
+
+.card-h3 {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2em;
+}
+.card-p {
+  font-size: 16px;
+  line-height: 1.875em;
+  color: var(--grey);
 }
 .card {
-  width: 380px;
-  margin-right: 30px;
-}
-.card:nth-child(3n) {
-  margin-right: 0;
+  font-family: "Roboto";
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 6em;
+  width: 322px;
+  height: 36px;
 }
